@@ -2,7 +2,7 @@
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2012 University of Oxford
-% Version: 0.3.0
+% Version: 0.3.1
 % $Rev$
 % $Date$
 %
@@ -51,7 +51,7 @@ d = [...
 
 % dd =
 % 
-%     0.0000    7.0000    9.0000   20.0000   20.0000   11.0000
+%      0     7     9    20    20    11
 % 
 % p =
 % 
@@ -62,9 +62,9 @@ d = [...
 
 % dd =
 % 
-%     0.0000    7.0000    9.0000   20.0000   20.0000   11.0000
-%     9.0000   10.0000    0.0000   11.0000   11.0000    2.0000
-%    11.0000   12.0000    2.0000   13.0000    9.0000    0.0000
+%     0     7     9    20    20    11
+%     9    10     0    11    11     2
+%    11    12     2    13     9     0
 % 
 % p =
 % 
@@ -81,7 +81,7 @@ d = [...
 
 % dd =
 % 
-%     0.0000    7.0000    9.0000   20.0000       Inf   11.0000
+%     0     7     9    20   Inf    11
 % 
 % p =
 % 
@@ -107,9 +107,10 @@ d2 = [...
 
 % dd2 =
 % 
-%     0.0000   10.0000    7.0000   16.0000   31.0000   16.0000
-%    10.0000    0.0000    2.0000   11.0000   26.0000   11.0000
-%     7.0000    2.0000    0.0000    9.0000   24.0000    9.0000
-%    16.0000   11.0000    9.0000    0.0000   14.0000   18.0000
-%    31.0000   25.0000   24.0000   14.0000    0.0000   15.0000
-%    16.0000   11.0000    9.0000   18.0000   15.0000    0.0000
+%     0    10     7    16    31    16
+%    10     0     2    11    26    11
+%     7     2     0     9    24     9
+%    16    11     9     0    14    18
+%    31    25    24    14     0    15
+%    16    11     9    18    15     0
+   
